# django-ormql

./: .gitlab-ci.yml  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: style.yml  tests.yml
django_ormql/: columns.py  db_func.py  engine.py  exceptions.py  model_utils.py  query.py  tables.py
doc/: design.md  index.md  running.md  syntax.md  tables.md
tests/: conftest.py  settings.py  test_aggregate.py  test_comment.py  test_expr.py  test_generated_column.py  test_group_by.py  test_jsonfield.py  test_limit.py  test_math.py  test_order_by.py  test_placeholder.py  test_select_col_from.py  test_subqueries.py  test_unsupported.py  test_where.py
tests/testapp/: apps.py  factories.py  models.py  ormql.py
